2009-01-23  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c (deleter): Remove
	the children of a folder whenever it is deleted

2009-01-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
	on creating new items (ie. after creating a new folder, don't add
	the account name in the full path).

2009-01-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c
	(tny_gtk_folder_list_store_remove): remove folders that
	belong to the account that is being removed

2009-01-14  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	added a missing connect_unlock in imap_connect_online, when auth
	failed.

2009-01-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account.c: initialize properly some 
	variables, and also free properly some vars (to avoid leaks). 
	Patch contributed by Qasim Ahmad.

	* libtinymail-camel/tny-camel-folder.c: leak fix in TnyCamelFolder
	copy_shared implementation (contributed by Qashim Ahmad).

2009-01-08  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	now *_stop_idle_connect_lock loops if it cannot get the connect lock
	to avoid interlocks if two concurrent threads try to get the lock.

2008-12-15  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account-store.c: removed unnecesary camel
	exception checks.

	* libtinymail-camel/tny-session-camel.c: added missing unref in
	set_device.

2008-12-08  Suhang Wan  <shuang.wan@intel.com>

	* Fixed compilation errors in unit tests

2008-11-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: set priv->account to NULL in
	dispose after unref'ing it.

2008-11-27  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c